--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -485,7 +485,7 @@
         <a href="{{ site.baseurl }}/sentiment/">Sentiment</a>
         <a href="{{ site.baseurl }}/stories/">Stories</a>
         <a href="{{ site.baseurl }}/prompts/">Prompts</a>
-        <a href="{{ site.baseurl }}/about/">About Beau</a>
+        <a href="{{ site.baseurl }}/about-beau/">About Beau</a>
     </nav>
 </body>
 </html>
